<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:paddingStart="@dimen/padding_horizontal"
    android:paddingEnd="@dimen/padding_horizontal"
    android:paddingTop="@dimen/padding_10dp"
    android:paddingBottom="@dimen/padding_10dp"
    tools:context=".views.SinglePlayerActivity">

    <TextView
        android:id="@+id/text_counter_correct_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/text_counter_wrong_answers"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="start"
        android:textColor="@color/white"
        android:fontFamily="casual"
        tools:text="@string/correct_answers_dummy"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/text_counter_wrong_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:textStyle="bold"
        tools:text="@string/wrong_answers_dummy"/>

    <View
        android:id="@+id/view_divider_results"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_blue"
        android:layout_below="@id/text_counter_correct_answers"
        android:layout_marginTop="@dimen/padding_10dp"
        android:layout_marginBottom="@dimen/padding_10dp"/>

    <TextView
        android:id="@+id/text_translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_divider_results"
        android:text="@string/dummy_button"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textSize="18sp"
        />

    <View
        android:id="@+id/view_divider_controls"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_blue"
        android:layout_above="@id/text_game_question"
        android:layout_marginTop="@dimen/padding_10dp"
        android:layout_marginBottom="@dimen/padding_10dp"/>

    <TextView
        android:id="@+id/text_game_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_word_to_be_translated"
        android:text="@string/game_question"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_word_to_be_translated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_above="@id/layout_controls"
        android:fontFamily="casual"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/layout_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="4">

    <androidx.appcompat.widget.AppCompatImageButton
        android:theme="@style/GreenButtonStyle"
        android:id="@+id/button_correct_translation"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_10dp"
        android:src="@drawable/vector_checkmark"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:theme="@style/RedButtonStyle"
        android:id="@+id/button_wrong_translation"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_10dp"
        android:src="@drawable/vector_clear"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:theme="@style/GreyButtonStyle"
        android:id="@+id/button_next_word"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_10dp"
        android:src="@drawable/vector_next"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:theme="@style/GreyButtonStyle"
        android:id="@+id/button_restart"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_10dp"
        android:src="@drawable/vector_restart"/>
    </LinearLayout>
</RelativeLayout>