...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".views.StartGameActivity">

    <Button
        android:id="@+id/button_single_player"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:keepScreenOn="true"
        android:padding="@dimen/padding_10dp"
...
